varlen_example/shouldfail/bad_names.stderr
warning: unused import: `varlen::define_varlen`
 --> src/lib.rs
  |
  | use varlen::define_varlen;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0124]: field `x` is already declared
 --> shouldfail/bad_names.rs:9:5
  |
6 |     x: u8,
  |     ----- `x` first declared here
...
9 |     x: u8,
  |     ^^^^^ field already declared

error[E0124]: field `x` is already declared
 --> shouldfail/bad_names.rs:3:1
  |
3 | #[define_varlen]
  | ^^^^^^^^^^^^^^^^
  | |
  | field already declared
  | `x` first declared here
  |
  = note: this error originates in the attribute macro `define_varlen` (in Nightly builds, run with -Z macro-backtrace for more info)
